...
    <string name="next_step">Next Step</string>
    <string name="playbtn">Play Video</string>

    <!-- Self guided tour menu -->
    <string name="self_guided_title">Self Guided Tour</string>
    <string name="preset_tour_button">Follow a pre-set walking tour</string>
    <string name="own_pace_button">Discover at your own pace</string>

    <!--Text For Pre-Config Tour-->

    <!-- Titles -->
    <string name="welcome_title">Welcome!</string>
    <string name="buildings_title">Surrounding Buildings</string>
...
        secure in all aspects.
    </string>

    <string name="end_tour">We hope you enjoyed this brief tour of our building!</string>

    <!-- Discover at own pace menu -->
    <string name="floor1_button">1st Floor</string>
    <string name="floor2_button">2nd Floor</string>
    <string name="floor3_button">3rd Floor</string>
    <string name="floor4_button">4th Floor</string>
    <string name="floor5_button">5th Floor</string>
    <string name="floor6_button">6th Floor</string>

    <!-- Self guided tour strings -->
    <string name="error_message">Error loading floor</string>
    <string name="floor1_image_desc">floor plan of floor one</string>
    <string name="floor2_image_desc">floor plan of floor two</string>
    <string name="floor3_image_desc">floor plan of floor three</string>
...
    <string name="university_stops">University</string>
    <string name="accomodation_stops">Accommodation</string>

    <array name="pre_config_tour"></array>

    <!-- Nav Bar Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>

